[package]
name = "tree-sitter-pseudo"
description = "A parser for the pseudo langage."
version = "0.0.1"
authors = ["nicknamely"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pseudo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nicknamely/tree-sitter-pseudo.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
